--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,26 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams-test-utils</artifactId>
+            <version>2.6.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.4.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -55,9 +75,6 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.5.2</version>
                 <configuration>
-                    <descriptionRefs>
-                        <descriptionRef>jar-with-dependencies</descriptionRef>
-                    </descriptionRefs>
                     <archive>
                         <manifest>
                             <addClassPath>true</addClassPath>
